--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,3 @@
 <p>Hello <%= @user.screen_name %></p>
 
-<% @followers.each do |follower| %>
-<%= follower.screen_name %>
-<% end %>
+<p><%= @followers %></p>
