twitter has a limit of returning 20 results. successfully worked around the 20 limit by calling .each on the response object since the twitter gem handles cursoring automically.

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,6 @@
-<p>Hello <%= @user.screen_name %></p>
+<p>Hello <%= @user.name %></p>
 
-<p><%= @followers %></p>
+<p>Most Influential Followers: <%= @followers %></p>
+<p>Verified Followers: <%= %></p>
+<p>Global Reach of Tweet: <%= %></p>
+<p>Recent Followers: <%= %></p>
