adding some stuff

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,7 +30,9 @@
   </div>
 
   <div>
-    <h2>Global Reach of Tweet: </h2><%= @user.total_followers %>
+    <h2>Global Reach of Tweet: </h2>
+
+    <p><%= @user.total_followers %></p>
   </div>
 
   <div>
