--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if user_signed_in? %>
+  <div>
+    <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+  </div>
+<% end %> 
 
 <%= yield %>
 
